Segunda section do main feita

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -34,6 +34,29 @@
             <span class="sobre__nos">Sobre nós</span>
             <h2 class="sobre__titulo">Por que somos diferentes?</h2>
             <p class="sobre__conteudo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+        </section>
+
+        <section class="container__informacoes">
+            <div class="itens">
+                <span class="valor">400+</span>
+                <h2 class="informacoes__titulo">Projetos concluídos</h2>
+                <p class="informacoes__paragrafo">Nós ajudamos a construir mais de 400 projetos incríveis.</p>
+            </div>
+            <div class="itens">
+                <span class="valor">100+</span>
+                <h2 class="informacoes__titulo">Colaboradores</h2>
+                <p class="informacoes__paragrafo">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes.</p>
+            </div>
+            <div class="itens">
+                <span class="valor">20k</span>
+                <h2 class="informacoes__titulo">Downloads</h2>
+                <p class="informacoes__paragrafo">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes.</p>
+            </div>
+            <div class="itens">
+                <span class="valor">500+</span>
+                <h2 class="informacoes__titulo">Reviews 5 estrelas</h2>
+                <p class="informacoes__paragrafo">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
+            </div>
         </section>
     </main>
 </body>
