--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
                 <p class="informacoes__paragrafo">Estamos orgulhosos de contar com mais de 500 reviews 5 estrelas em nossos produtos.</p>
             </div>
         </section>
+
+        <section class="container__vagas">
+            <div class="vagas">
+                <span class="vagas__abertas">Vagas abertas!</span>
+                <h2 class="vagas__titulo">Estamos procurando por talentos</h2>
+                <p class="vagas__paragrafo">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
+                <img src="img/Image.svg" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
