--- a/index.html
+++ b/index.html
@@ -64,7 +64,55 @@
                 <span class="vagas__abertas">Vagas abertas!</span>
                 <h2 class="vagas__titulo">Estamos procurando por talentos</h2>
                 <p class="vagas__paragrafo">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</p>
-                <img src="img/Image.svg" alt="">
+                <img src="img/Image.svg" alt="fotos" width="120%">
+            </div>
+        </section>
+
+        <section>
+            <div class="box__vagas">
+                <h2 class="titulo__vagas">Design</h2>
+                <div class="box">
+                    <h3 class="box__titulo">Product Designer</h3>
+                    <div class="box__informacoes">
+                        <p class="box__paragrafo">Full-time</p>
+                        <p class="box__paragrafo">Faixa salarial: R$7.000</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h3 class="box__titulo">UX Designer</h3>
+                    <div class="box__informacoes">
+                        <p class="box__paragrafo">Full-time</p>
+                        <p class="box__paragrafo">Faixa salarial: R$6.000</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="box__vagas">
+                <h2 class="titulo__vagas">Desenvolvimento de Software</h2>
+                <div class="box">
+                    <h3 class="box__titulo">Desenvolvedor(a) iOS</h3>
+                    <div class="box__informacoes">
+                        <p class="box__paragrafo">Full-time</p>
+                        <p class="box__paragrafo">Faixa salarial: R$8.000</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h3 class="box__titulo">Desenvolvedor(a) Front-end</h3>
+                    <div class="box__informacoes">
+                        <p class="box__paragrafo">Full-time</p>
+                        <p class="box__paragrafo">Faixa salarial: R$7.000</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h3 class="box__titulo">Desenvolvedor(a) Back-end</h3>
+                    <div class="box__informacoes">
+                        <p class="box__paragrafo">Full-time</p>
+                        <p class="box__paragrafo">Faixa salarial: R$8.000</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
