--- a/index.html
+++ b/index.html
@@ -115,6 +115,28 @@
                 </div>
             </div>
         </section>
+
+        <section class="container__opinioes">
+            <div class="box__opnioes">
+                <span class="opnioes">Veja o que nossos colaboradores falam sobre nós</span>
+                <h2 class="opnioes__titulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+                <div class="perfil">
+                    <img src="img/Avatar.svg" alt="" class="imagem__perfil">
+                    <h3 class="perfil__titulo">Júlia Castro</h3>
+                    <p class="perfil__paragrafo">Desenvolvedora Web</p>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <h2 class="rodape__titulo">Acompanhe as nossas oportunidades</h2>
+        <p class="rodape__paragrafo">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+        <div class="email">
+            <input type="email" name="email" id="rodape__email" placeholder="Seu e-mail" class="rodape__email">
+            <button class="cadastrar__rodape">Cadastrar</button>
+        </div>
+        <p class="copyright">© 2022 OptimusTech. Todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
